--- a/style/main.scss
+++ b/style/main.scss
@@ -6,9 +6,6 @@ body {
     /* 기본 text color */
 }
 
-.wrapper {
-}
-
 .inner {
     width: 1200px;
     height: auto;
@@ -125,7 +122,6 @@ a {
     }
 }
 
-
 /* 왼쪽 히든 메뉴 */
 .openLeft {
     display: none;  //나중에 보이게 바꾸기
@@ -160,7 +156,6 @@ a {
 
     .mini {}
 }
-
 
 #header {
     position: fixed;
@@ -276,8 +271,6 @@ a {
     }
     
 }
-
-
 
 main {
     box-shadow: 0 0 1px #292929;
@@ -588,12 +581,12 @@ main {
                     display: block;
                     margin: 0 5px;
                     padding: 10px;
-                    font-size: 17px;
+                    font-size: 18px;
+                    font-weight: bold;
                 }
 
                 .clickNav{
                     color: #EC7D2C;
-                    font-weight: bold;
                 }
             }
         }
@@ -753,28 +746,70 @@ main {
     
     .interview {
         height: auto;
+
         h2{}
 
-        .interviewSlider {
-            width: 100%;
-            height: 450px;
-            background: #ff9a9a;
-            overflow: hidden;
+        .inner{
+            position: relative;
 
-            .interviewitem{
-                width: 400px;
-                height: 100%;
-                float: left;
-                
-
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    }
+            .prev,
+            .next{
+                position: absolute;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                top: 50%;
+                transform: translateY(-50%);
+                width: 50px;
+                height: 50px;
+                background: #ccc;
+                border-radius: 50%;
+                cursor: pointer;
+                z-index: 77;
             }
 
-        }    
+            .prev{
+                left: -70px;
+            }
+            .next{
+                right: -70px;
+            }
+        }
+
+        .interviewSliderWrap{
+            position: relative;
+            width: 1200px;
+            height: auto;
+            margin: 0 auto;
+            //overflow: hidden;
+            
+            .interviewSlider {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                flex-wrap: wrap;
+                height: 630px;
+                margin: 0 auto;
+                background: pink;
+
+                .interviewitem{
+                    flex: 1200px;
+                    height: 100%;
+                    transition: .5s;
+                    cursor: pointer;
+    
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+            }
+
+            
+        }
+
+    
             
     }
 
@@ -1066,3 +1101,4 @@ footer{
         }
     }
 }
+
