--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import './utill.css';
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #292929;
@@ -59,7 +60,8 @@ a {
   height: 50px;
   margin: 30px auto 0;
   border: 1px solid #ccc;
-  background: inherit;
+  background: #fff;
+  transition: 0.4s;
 }
 
 .popUp {
@@ -327,7 +329,17 @@ main .hot .hotCon .best1 {
   width: 420px;
   height: 700px;
 }
-main .hot .hotCon .best1 .best1Bg {
+main .hot .hotCon .best1 .b1ImgBox {
+  width: 100%;
+  height: 610px;
+  overflow: hidden;
+}
+main .hot .hotCon .best1 .b1ImgBox img {
+  width: 100%;
+  height: 610PX;
+  transition: 0.5s;
+}
+main .hot .hotCon .best1 .b1ImgBox .best1Bg {
   position: absolute;
   display: none;
   width: 100%;
@@ -336,7 +348,7 @@ main .hot .hotCon .best1 .best1Bg {
   left: 0;
   background: rgba(0, 0, 0, 0.7);
 }
-main .hot .hotCon .best1 .best1Bg .goTicketing {
+main .hot .hotCon .best1 .b1ImgBox .best1Bg .goTicketing {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -348,15 +360,11 @@ main .hot .hotCon .best1 .best1Bg .goTicketing {
   border: none;
   border-radius: 8px;
 }
-main .hot .hotCon .best1:hover .best1Bg {
-  display: block;
-}
-main .hot .hotCon .best1 img {
-  width: 100%;
-  height: 610PX;
-}
-main .hot .hotCon .best1:hover img {
+main .hot .hotCon .best1 .b1ImgBox:hover img {
   transform: scale(1.1);
+}
+main .hot .hotCon .best1 .b1ImgBox:hover .best1Bg {
+  display: block;
 }
 main .hot .hotCon .best1 .best1Txt {
   width: 100%;
