--- a/style/main.scss
+++ b/style/main.scss
@@ -1,8 +1,9 @@
 @charset "UTF-8";
+@import './utill.css';
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #292929;
+    color: $block;
     /* 기본 text color */
 }
 
@@ -62,8 +63,31 @@ a {
     width: 200px;
     height: 50px;
     margin: 30px auto 0;
-    border: 1px solid #ccc;
-    background: inherit;
+    border: 1px solid $borderColor;
+    background: $white;
+    transition: .4s;
+
+    // @keyframes moreBtn{
+    //     0%{
+    //         background: #fff;
+    //     }
+    //     20%{
+    //         background: linear-gradient(45deg, #fff, #fff, #EC7D2C);
+
+    //     }
+    //     50%{
+    //         background: linear-gradient(45deg, #fff, #EC7D2C);
+    //     }
+    //     100%{
+    //         background: #EC7D2C;
+    //     }
+    // }
+
+    // &:hover{
+    //     animation: moreBtn 1s 1;
+
+    // }
+
 }
 
 .popUp {
@@ -73,9 +97,9 @@ a {
     height: 450px;
     bottom: 30px;
     left: 30px;
-    border: 1px solid #ccc;
+    border: 1px solid $borderColor;
     z-index: 999;
-    background: #fff;
+    background: $white;
 
     ul {
         display: flex;
@@ -86,7 +110,7 @@ a {
         height: 414px;
         padding: 10px;
         box-sizing: border-box;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid $borderColor;
     }
 
     li {
@@ -130,7 +154,7 @@ a {
     height: 100vh;
     padding: 0 50px;
     background: black;
-    color: white;
+    color: $white;
     z-index: 999;
     /*  확인필   */
 
@@ -197,7 +221,7 @@ a {
             width: 100%;
             height: 4px;
             border-radius: 2px;
-            background: #292929;
+            background: $block;
         }
     }
 
@@ -246,7 +270,7 @@ a {
                 padding: 0 5px;
                 margin-right: 15px;
                 border: none;
-                border-bottom: 2px solid #292929;
+                border-bottom: 2px solid $block;
                 outline: none;
                 font-size: 18px;
                 background: none;
@@ -270,11 +294,10 @@ a {
             font-weight: bold;
         }
     }
-
 }
 
 main {
-    box-shadow: 0 0 1px #292929;
+    box-shadow: 0 0 1px $block;
 
     .mainSlider {
         position: relative;
@@ -308,7 +331,7 @@ main {
                     float: left;
                     width: 15px;
                     height: 15px;
-                    background: gray;
+                    background: $borderColor;
                     margin: 0 10px;
                     cursor: pointer;
                     border-radius: 50%;
@@ -328,7 +351,7 @@ main {
         .nextBtn {
             position: absolute;
             top: 50%;
-            color: white;
+            color: $white;
             font-size: 50px;
             transform: translateY(-50%);
             cursor: pointer;
@@ -349,8 +372,8 @@ main {
             height: 40px;
             margin: 10px auto 0;
             font-size: 16px;
-            color: #f1f1f1;
-            background: #EC7D2C;
+            color: $white;
+            background: $mainColor;
             border: none;
             border-radius: 8px;
             cursor: pointer;
@@ -373,40 +396,46 @@ main {
                 width: 420px;
                 height: 700px;
 
-                .best1Bg {
-                    position: absolute;
-                    display: none;
+                .b1ImgBox{
                     width: 100%;
                     height: 610px;
-                    top: 0;
-                    left: 0;
-                    background: rgba(0, 0, 0, 0.7);
+                    overflow: hidden;
 
-                    .goTicketing {
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        width: 200px;
-                        height: 40px;
-                        background: #EC7D2C;
-                        color: #f1f1f1;
-                        border: none;
-                        border-radius: 8px;
+                    img {
+                        width: 100%;
+                        height: 610PX;
+                        transition: 0.5s;
                     }
-                }
 
-                &:hover .best1Bg {
-                    display: block;
-                }
+                    .best1Bg {
+                        position: absolute;
+                        display: none;
+                        width: 100%;
+                        height: 610px;
+                        top: 0;
+                        left: 0;
+                        background: rgba(0, 0, 0, 0.7);
 
-                img {
-                    width: 100%;
-                    height: 610PX;
-                }
+                        .goTicketing {
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                            width: 200px;
+                            height: 40px;
+                            background: $mainColor;
+                            color: $white;
+                            border: none;
+                            border-radius: 8px;
+                        }
+                    }
+                    &:hover img {
+                        transform: scale(1.1);
+                    }
 
-                &:hover img {
-                    transform: scale(1.1);
+                    &:hover .best1Bg {
+                        display: block;
+                    }
                 }
 
                 .best1Txt {
@@ -417,7 +446,7 @@ main {
                     justify-content: center;
                     align-items: center;
                     row-gap: 10px;
-                    border-bottom: 1px solid #ccc;
+                    border-bottom: 1px solid $borderColor;
 
                     h3,
                     p {
@@ -437,28 +466,26 @@ main {
                         font-size: 14px;
                         color: #aaa;
                     }
-
-
                 }
             }
 
-            ul {
+            ul{
                 display: flex;
                 justify-content: space-between;
                 flex-wrap: wrap;
                 row-gap: 20px;
                 width: 760px;
 
-                li {
+                li{
                     width: 240px;
                     height: 340px;
                     float: left;
 
-                    div {
+                    div{
                         position: relative;
                         width: 100%;
                         height: 100%;
-                        border: 1px solid #ddd;
+                        border: 1px solid $borderColor;
                         box-sizing: border-box;
                         overflow: hidden;
 
@@ -474,23 +501,18 @@ main {
                             top: 0;
                             left: 0;
                             text-align: center;
-                            color: #f1f1f1;
+                            color: $white;
                             background-color: rgb(0, 0, 0, 0.7);
-
                             h3 {
                                 font-size: 18px;
                                 font-weight: bold;
                                 margin-bottom: 8px;
                             }
-
                             p {
                                 font-size: 14px;
                                 line-height: 1.2rem;
                             }
-
-
                         }
-
                         &:hover .bestTxt {
                             display: flex;
                             flex-direction: column;
@@ -522,7 +544,7 @@ main {
                 display: block;
                 width: 100%;
                 height: 100%;
-                border: 1px solid #ddd;
+                border: 1px solid $borderColor;
                 box-sizing: border-box;
 
                 .newImg {
@@ -545,12 +567,12 @@ main {
                         transform: translate(-50%, -50%);
                         width: 170px;
                         height: 100px;
-                        border: 3px solid #EC7D2C;
+                        border: 3px solid $mainColor;
                         background-color: rgb(0, 0, 0, 0.7);
-                        color: #f1f1f1;
+                        color: $white;
 
                         span:first-of-type {
-                            color: #EC7D2C;
+                            color: $mainColor;
                             font-size: 25px;
                             font-weight: bold;
                         }
@@ -563,7 +585,7 @@ main {
 
                 .text {
                     p {
-                        color: #EC7D2C;
+                        color: $mainColor;
                     }
                 }
             }
@@ -604,7 +626,7 @@ main {
                     float: left;
                     width: 10px;
                     height: 10px;
-                    background: gray;
+                    background: $borderColor;
                     margin: 0 7px;
                     cursor: pointer;
                     border-radius: 50%;
@@ -637,7 +659,7 @@ main {
                 }
 
                 .clickNav {
-                    color: #EC7D2C;
+                    color: $mainColor;
                 }
             }
         }
@@ -665,7 +687,7 @@ main {
                             display: block;
                             width: 100%;
                             height: 100%;
-                            border: 1px solid #ddd;
+                            border: 1px solid $borderColor;
                             box-sizing: border-box;
 
                             .rankConImg {
@@ -705,8 +727,8 @@ main {
                                 left: 15px;
                                 width: 50px;
                                 height: 50px;
-                                background: orange;
-                                color: #fff;
+                                background: $mainColor;
+                                color: $white;
                                 font-size: 20px;
                                 font-weight: bold;
                             }
@@ -898,7 +920,7 @@ main {
                     max-height: 60px;
                     margin-right: 10px;
                     padding: 0 10px;
-                    border: 1px solid #ccc;
+                    border: 1px solid $borderColor;
                     box-sizing: border-box;
                     overflow: hidden;
                     outline: none;
@@ -906,8 +928,8 @@ main {
 
                 .plusBtn {
                     width: 60px;
-                    background: #fff;
-                    border: 1px solid #ccc;
+                    background: $white;
+                    border: 1px solid $borderColor;
                     cursor: pointer;
                 }
             }
@@ -915,12 +937,12 @@ main {
             .listBox {
 
                 .listBoxUl {
-                    border-top: 1px solid #ccc;
+                    border-top: 1px solid $borderColor;
 
                     .newLi {
                         position: relative;
                         padding: 10px;
-                        border-bottom: 1px solid #ccc;
+                        border-bottom: 1px solid $borderColor;
 
                         .proflie {
                             display: flex;
@@ -937,7 +959,7 @@ main {
                                 float: left;
                                 margin-right: 10px;
                                 border-radius: 50%;
-                                border: 1px solid #bbb;
+                                border: 1px solid $borderColor;
                             }
 
                             .nickName {
@@ -965,7 +987,7 @@ main {
                             }
 
                             .clickBtn {
-                                background: #ff9a9a;
+                                background: $mainColor;
                             }
                         }
 
@@ -1035,7 +1057,7 @@ main {
                 margin-bottom: 10px;
                 font-size: 35px;
                 font-weight: bold;
-                color: orange;
+                color: $mainColor;
             }
 
             p {
@@ -1054,8 +1076,8 @@ main {
             align-items: center;
             width: 650px;
             height: 100%;
-            border-left: 1px solid #ccc;
-            border-right: 1px solid #ccc;
+            border-left: 1px solid $borderColor;
+            border-right: 1px solid $borderColor;
 
             ul {
                 display: flex;
