--- a/style/ticketing.scss
+++ b/style/ticketing.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import './utill.css';
 
 *{box-sizing: border-box;}
 
@@ -11,9 +12,11 @@
     height: 100vh;
 
     .wrap{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
         width: 800px;
-        height: 800px;
-        padding: 50px;
+        height: 650px;
         background: #f1f1f1;
         
         .screen{
@@ -21,8 +24,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 170px;
-            margin-bottom: 30px;
+            height: 150px;
             font-size: 50px;
             font-weight: bold;
         }
@@ -30,18 +32,22 @@
         .seatBox{
             display: flex;
             justify-content: center;
+            align-items: center;
             width: 100%;
-            height: 500px;
-            border: 1px solid rebeccapurple;
+            height: 400px;
 
-            .seatNum{
+            .seatNum,
+            .seat{
                 display: flex;
                 flex-direction: column;
-                justify-content: start;
+                justify-content: center;
                 row-gap: 5px;
-                padding: 20px 0px 20px 20px;
-                width: 50px;
-                height: 500px;
+                width: 630px;
+                height: 100%;
+            }
+
+            .seatNum{
+                width: 30px;
 
                 .newSpan{
                     display: flex;
@@ -55,13 +61,7 @@
             }
 
             .seat{
-                display: flex;
-                flex-direction: column;
-                justify-content: start;
-                row-gap: 5px;
-                width: 630px;
-                height: 500px;
-                padding: 20px 20px 20px 0;
+                width: 650px;
 
                 .newCol{
                     display: flex;
@@ -89,8 +89,6 @@
                 }
             }
         }
-
-        
     }
 
     .showTicket{
